Revision history for Perl extension GraphViz2::Marpa.

1.04  Tue Sep 25 13:55:00 2012
	- Internal changes only.No need to upgrade.
	- Change Marpa.pm to support the new distro GraphViz2::Marpa::TreeUtils, which is a sub-class of GraphViz2::Marpa.
		Specifically, the lexer and the parser are stored in mutators, so they can be called from sub-classes.
	- This means any shell scripts using -l now need -lexed_file, and if using -p now need -parsed_file.
	- This in turns means patches to various scripts (scripts/*.sh and scripts/*.pl).
	- The opportunity was taken to spell out all command line option names in shell scripts.
	- Lastly, all data/*.dot files were renamed to data/*.gv, in line with Graphviz itself.

1.03  Mon Sep  3 09:28:00 2012
	- Remove unused dependency Module::UseFrom.
	- Fix disastrous bug in the parser. Test with data/90.Petersen.dot.
	- Add README.
	- Rename scripts/generate.demo.pl to scripts/generate.index.pl, since it does not run all demos,
		it just creates html/index.html.
	- Add FAQ item in GraphViz2::Marpa about how to re-create demo files.

1.02  Fri Jun 22 11:50:00 2012
	- Patch the regexp in the DFA used to recognize HTML-style labels. It's smarter now.
	- Patch the default renderer to not add double-quote delimiters when outputting HTML-style labels.
		These patches require files (30, 31, 32, 33, 34, 35, 38).dot to be edited.
		And they require files (30, 31, 32, 33, 34, 35, 38).(lex, parse, rend) to be re-generated.
	- Add an item to both the lexer's and parser's FAQs about embedding things like <br ... /> in HTML-style labels.
	- Add an item to the lexer's FAQ about the 1 label format still not handled by the new code.
	- Change the format (spacing) of tokens printed in the lexer to match format used in the parser.
	- Update FAQ as to why setting report_items prints 2 copies of the tokens (Ans: 1 each for lexer and parser).

1.01  Wed Feb  8 11:22:00 2012