@@ -3,6 +3,23 @@ Name=GraphViz2::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.04
 Changelog.Parser=Config::IniFiles V 2.68
 
+[V 1.04]
+Date=2012-09-25T13:55:00
+Comments= <<EOT
+- Design change. In the output streams from both the lexer and the parser, the 3 special tokens whose names
+are edge, graph and node, were given the type node_id. Unfortunately, this is confusing because any
+normal edge, graph or node was also given that type. Now, these 3 cases are of type class_id.
+This makes it easier for code processing these output streams to distinguish between special cases
+and common-or-garden tokens. It should have always been done this way, and specifically simplifies code
+in GraphViz2::Marpa::TreeUtils.
+- Change Marpa.pm to support the new distro GraphViz2::Marpa::TreeUtils, which is a sub-class of GraphViz2::Marpa.
+Specifically, the lexer and the parser are stored in mutators, so they can be called from sub-classes.
+- This means any shell scripts using -l now need -lexed_file, and if using -p now need -parsed_file.
+- This in turns means patches to various scripts (scripts/*.sh and scripts/*.pl).
+- The opportunity was taken to spell out all command line option names in shell scripts.
+- Lastly, all data/*.dot files were renamed to data/*.gv, in line with Graphviz itself.
+EOT
+
 [V 1.03]
 Date=2012-09-03T09:28:00
 Comments= <<EOT
