@@ -1,0 +1,35 @@
+"type","value"
+strict              , "no"
+digraph             , "yes"
+graph_id            , "graph_51"
+open_brace          , "1"
+class_id            , "edge"
+open_bracket        , "["
+attribute_id        , "color"
+equals              , "="
+attribute_value     , "blue"
+close_bracket       , "]"
+class_id            , "node"
+open_bracket        , "["
+attribute_id        , "shape"
+equals              , "="
+attribute_value     , "Mdiamond"
+close_bracket       , "]"
+node_id             , "node_51_01"
+class_id            , "node"
+open_bracket        , "["
+attribute_id        , "shape"
+equals              , "="
+attribute_value     , "Msquare"
+close_bracket       , "]"
+node_id             , "node_51_02"
+class_id            , "graph"
+open_bracket        , "["
+attribute_id        , "label"
+equals              , "="
+attribute_value     , "Class Demo"
+close_bracket       , "]"
+node_id             , "node_51_01"
+edge_id             , "->"
+node_id             , "node_51_02"
+close_brace         , "1"
