@@ -1,0 +1,31 @@
+"type","value"
+strict              , "no"
+digraph             , "yes"
+graph_id            , "graph_51"
+start_graph         , "1"
+class_id            , "edge"
+start_attribute     , "["
+attribute_id        , "color"
+attribute_value     , "blue"
+end_attribute       , "]"
+class_id            , "node"
+start_attribute     , "["
+attribute_id        , "shape"
+attribute_value     , "Mdiamond"
+end_attribute       , "]"
+node_id             , "node_51_01"
+class_id            , "node"
+start_attribute     , "["
+attribute_id        , "shape"
+attribute_value     , "Msquare"
+end_attribute       , "]"
+node_id             , "node_51_02"
+class_id            , "graph"
+start_attribute     , "["
+attribute_id        , "label"
+attribute_value     , "Class Demo"
+end_attribute       , "]"
+node_id             , "node_51_01"
+edge_id             , "->"
+node_id             , "node_51_02"
+end_graph           , "1"
