@@ -1,7 +1,12 @@
 Revision history for Perl extension GraphViz2::Marpa.
 
 1.04  Tue Sep 25 13:55:00 2012
-	- Internal changes only.No need to upgrade.
+	- Design change. In the output streams from both the lexer and the parser, the 3 special tokens whose names
+		are edge, graph and node, were given the type node_id. Unfortunately, this is confusing because any
+		normal edge, graph or node was also given that type. Now, these 3 cases are of type class_id.
+		This makes it easier for code processing these output streams to distinguish between special cases
+		and common-or-garden tokens. It should have always been done this way, and specifically simplifies code
+		in GraphViz2::Marpa::TreeUtils.
 	- Change Marpa.pm to support the new distro GraphViz2::Marpa::TreeUtils, which is a sub-class of GraphViz2::Marpa.
 		Specifically, the lexer and the parser are stored in mutators, so they can be called from sub-classes.
 	- This means any shell scripts using -l now need -lexed_file, and if using -p now need -parsed_file.
